--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/server.js",
+    "dev": "sucrase-node src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -13,6 +13,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "kafkajs": "^1.14.0",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "sucrase": "^3.15.0"
   }
 }
